--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
     <h2>teams</h2>
     <p>this is called physcics</p>
     <p>this is called second push by zubair</p>
-    <a href="https://www.google.com">GOOGLE</a>
+    <a href="https://www.google.com">GOOGLE yahn pr nzar aa rha hy</a>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj2Ldu7BOUlK0IggTZa8jRu5Fis7C224VnN_Yl8lInDA&s" alt="WHITE FOOTBALL">
-    <hr><img src="/[005342].JPG">
-    <b>this is bold</b><br>
-    <i>this is italic</i><br>
+    <hr>
+
+    <img src="./kick.jpeg">
+    <b>this is bold</b>
+    <br>
+    <i>this is italic</i>
+    <br>
     <u>this is underline</u>
     <big>this big </big>
     <small>this is small</small>
     <hr>
-    <P>a<sub>2</sub>+b<sub>3</sub>=2</P>
+    
+    <p>a<sub>2</sub>+b<sub>3</sub>=2</P>
     <p>a<sup>4</sup>+c<sup>2</sup>=2</p>
     <Pre>    honesty
         honesty is the best policy:       1   2
