--- a/page_layout.html
+++ b/page_layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title>page layout  </title>
+        <title>page  </title>
     </head>
     <body>
         <a href="https://freecatphotoapp.com">
