block line html

--- a/list.html
+++ b/list.html
@@ -6,11 +6,11 @@
         </title>
     </head>
     <body>
-        <p>this is a true story about every living things that are going to die in any moment
+        <p style="border-color: red; border-style: dotted;">this is a true story about every living things that are going to die in any moment
             to pcik the first orgasm we define its type its quality its character and anything else
         </p>
         <ul>
-            <li>quiz</li>
+            <li style="border-color: cyan; border-style: dashed ;">quiz</li>
             <li>test</li>
             <li>assignment</li>
         </ul>
