--- a/projects/p1_landing_page/index.html
+++ b/projects/p1_landing_page/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
-<html style="background-color: black;">
-    <head>
-        <title>
-        Project1: Landing Page
-        </title>
-        <link rel="icon" type="image" href="icon_camera.png" style="background-color: white; text-align: start;">
-    </head>
-    <body>
-      
-    </body>
+<html style="background-color: black">
+
+<head>
+  <title>Project1: Landing Page</title>
+  <link rel="icon"
+        type="image"
+        href="./images/icon_camera.png"
+        style="background-color: white; text-align: start" />
+</head>
+
+<body>
+  <!-- 1st practice on nav bar -->
+  <!--<nav>
+    <img src="./images/icon_camera.png"
+         alt="logo camera"
+         style="background-color: white; width: 90px; border-radius: 25px" />
+    <p style="text-align: center; font-size: 29px">
+         <a href="/home/" style="color: red;font-family: 'Times New Roman', Timesserif;">Home</a> 
+         <a href="/service/" style="color: white;font-family: 'Times New Roman', Times, serif;">service</a> 
+         <a href="/About/" style="color: white;">About<a>   
+         <a href="/contact/" style="color: white">contact<a> 
+         <a href="/Blog/" style="color: white;">Blog</a>               
+         <button style="border-radius: 25px; font-size: 35px; color: red;" >login</button>
+            </p>
+  </nav>-->
+
+  <nav style="background-color: rgb(0, 0, 0)">
+    <div class="group"
+         style="width: 100%">
+      <div style="display: inline-block; background-color: rgb(0, 0, 0); text-align: start; width: 30%; ">
+        <img src="./images/icon_camera.png"
+             alt="logo camera"
+             style="background-color: white; width: 90px; border-radius:90% ; padding: 6px" />
+      </div>
+      <div style="display: inline-block;
+            background-color: rgb(0, 0, 0);
+            text-align: center;
+            width: 45%;
+            font-size: 25px;">
+        <p style="text-align:center; font-size: 29px">
+          <a href="/home/"
+             style="color: red;font-family: 'Times New Roman', Times, serif; padding-right: 20px ;">
+            Home
+          </a>
+          <a href="/service/"
+             style="color: white;font-family: 'Times New Roman', Times, serif;padding-right: 20px;">
+            service
+          </a>
+          <a href="/About/"
+             style="color: white; padding-right: 20PX;">
+            About
+          </a>
+          <a href="/contact/"
+             style="color: white;padding-right: 20PX;">
+            contact
+          </a>
+          <a href="/Blog/"
+             style="color: white;padding-right: 20PX;">
+            Blog
+          </a>
+        </p>
+      </div>
+      <div style="
+            display: inline-block;
+            background-color: rgb(8, 6, 6);
+            text-align: right;
+            width: 24%;
+          ">
+        <button type="button"
+                style=" font-size: 35px ; background-color: red; border-radius: 20%; color: white;;" >Login</button>
+      </div>
+    </div>
+  </nav>
+  <br><br><br><br><br><br>
+  <div style="color: red; ; display: inline; padding-left: 20%;font-size: 20px;">#Get Your1<sub>4</sub> Days Free Trial</div>
+  <div style="color: white;padding-left: 20%; font-size: 40px;">Manage All of Your Stuff  </div>
+  <div style="padding-right: 20%;"><img src="./images/icon_image6.jpg" alt="image" style="float: right;"></div>
+  <div style="color: white;padding-left: 20%; font-size: 40px;"> Using A TGB</div>
+<div style="color: azure;padding-left: 20%; ">Lorem ipsum dolor sit amet consectetur adipisicing Eius ratione site are the illegable </div>
+<di style="color: azure;padding-left: 20%;">again.</di>
+<div style="padding-left: 20%;"> <img src="./images/icon_image2.jpg" alt="image" width="59px" style="border-radius: 15px;"> 
+  <img src="./images/icon_image3.webp" alt=" image" width="59px" style="border-radius: 15px;"><img src="./images/icon_image4.jpg"  alt="image" width="59px" style="border-radius: 15px;">
+  <p style="color: white;display: inline;"><sub>4</sub>M+ users</P>
+</div>
+</body>
+
 </html>
