--- a/projects/p1_landing_page/index.html
+++ b/projects/p1_landing_page/index.html
@@ -9,7 +9,7 @@
         style="background-color: white; text-align: start" />
 </head>
 
-<body>
+<b>
   <!-- 1st practice on nav bar -->
   <!--<nav>
     <img src="./images/icon_camera.png"
@@ -28,37 +28,44 @@
   <nav style="background-color: rgb(0, 0, 0)">
     <div class="group"
          style="width: 100%">
-      <div style="display: inline-block; background-color: rgb(0, 0, 0); text-align: start; width: 30%; ">
-        <img src="./images/icon_camera.png"
+      <div style="display: inline-block; background-color: rgb(0, 0, 0); text-align: start; width: 27%; margin:20px;">
+        
+        <!--  -->
+        <!-- <img src="./images/icon_camera.png"
              alt="logo camera"
-             style="background-color: white; width: 90px; border-radius:90% ; padding: 6px" />
+             style="background-color: white; width: 70px; border-radius:99% ; padding: 6px; border-style:groove; border-color: red;" /> -->
+
+             
+        <div style="border-radius:100% ; padding: 17px; border-style:groove; border-color: red; width: fit-content; background-color:rgb(171, 171, 171);">
+          <img src="./images/icon_camera.png"
+               alt="logo camera" 
+               style="width: 35px;transform:rotate(320deg) ;" />
+        </div>
       </div>
       <div style="display: inline-block;
             background-color: rgb(0, 0, 0);
             text-align: center;
             width: 45%;
             font-size: 25px;">
-        <p style="text-align:center; font-size: 29px">
-          <a href="/home/"
-             style="color: red;font-family: 'Times New Roman', Times, serif; padding-right: 20px ;">
-            Home
-          </a>
-          <a href="/service/"
-             style="color: white;font-family: 'Times New Roman', Times, serif;padding-right: 20px;">
-            service
-          </a>
-          <a href="/About/"
-             style="color: white; padding-right: 20PX;">
-            About
-          </a>
-          <a href="/contact/"
-             style="color: white;padding-right: 20PX;">
-            contact
-          </a>
-          <a href="/Blog/"
-             style="color: white;padding-right: 20PX;">
-            Blog
-          </a>
+        <p style="text-align:center; font-size: 29px ">
+
+          <b>
+            <a style="color: red;font-family: 'Times New Roman', Times, serif; padding-right: 20px ;">
+              Home
+            </a>
+            <a style="color: white;font-family: 'Times New Roman', Times, serif;padding-right: 20px;">
+              Service
+            </a>
+            <a style="color: white; padding-right: 20PX;">
+              About
+            </a>
+            <a style="color: white;padding-right: 20PX;">
+              Contact
+            </a>
+            <a style="color: white;padding-right: 20PX;">
+              Blog
+            </a>
+          </b>
         </p>
       </div>
       <div style="
@@ -67,22 +74,41 @@
             text-align: right;
             width: 24%;
           ">
-        <button type="button"
-                style=" font-size: 35px ; background-color: red; border-radius: 20%; color: white;;" >Login</button>
+        <b> <button type="button"
+                  style=" font-size: 35px ; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;padding: 7px;font-weight:600;padding-left: 15px;padding-right: 15px;border-style: double;">Log in</button>
+        </b>
       </div>
     </div>
   </nav>
   <br><br><br><br><br><br>
-  <div style="color: red; ; display: inline; padding-left: 20%;font-size: 20px;">#Get Your1<sub>4</sub> Days Free Trial</div>
-  <div style="color: white;padding-left: 20%; font-size: 40px;">Manage All of Your Stuff  </div>
-  <div style="padding-right: 20%;"><img src="./images/icon_image6.jpg" alt="image" style="float: right;"></div>
-  <div style="color: white;padding-left: 20%; font-size: 40px;"> Using A TGB</div>
-<div style="color: azure;padding-left: 20%; ">Lorem ipsum dolor sit amet consectetur adipisicing Eius ratione site are the illegable </div>
-<di style="color: azure;padding-left: 20%;">again.</di>
-<div style="padding-left: 20%;"> <img src="./images/icon_image2.jpg" alt="image" width="59px" style="border-radius: 15px;"> 
-  <img src="./images/icon_image3.webp" alt=" image" width="59px" style="border-radius: 15px;"><img src="./images/icon_image4.jpg"  alt="image" width="59px" style="border-radius: 15px;">
-  <p style="color: white;display: inline;"><sub>4</sub>M+ users</P>
-</div>
-</body>
+  <div style="color: red; ; display: inline; padding-left: 20%;font-size: 20px;">#Get Your1<sub>4</sub> Days Free Trial
+  </div>
+  <b>
+    <div style="color: white;padding-left: 20%; font-size: 40px;">Manage All of Your Stuff </div>
+    <div style="padding-right: 20%;"><img src="./images/icon_image6.jpg"
+           alt="image"
+           style="float: right;background-color: black;"></div>
+    <div style="color: white;padding-left: 20%; font-size: 40px;"> Using A TGB</div>
+  </b>
+  <div style="color: rgb(131, 130, 129);padding-left: 20%; ">Lorem ipsum dolor sit amet consectetur adipisicing Eius
+    ratione site are the illegable </div>
+  <di style="color: rgb(133, 136, 136);padding-left: 20%;">again.</di>
+  <div style="padding-left: 20%;"> <img src="./images/icon_image2.jpg"
+         alt="image"
+         width="59px"
+         style="border-radius: 99%;border-style: double;border-color: red;">
+    <img src="./images/icon_image3.webp"
+         alt=" image"
+         width="59px"
+         style="border-radius: 99%; border-style: double;border-color: red;"><img src="./images/icon_image4.jpg"
+         alt="image"
+         width="59px"
+         style="border-radius: 99%;border-style: double;border-color: RED;">
+    <p style="color: white;display: inline;"><sub>4</sub>M+ users <b><button type="button"
+                style=" font-size: 35px; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;margin-top: 45px;padding: 7px;border-style: double;font-weight: 600;padding-left: 15px;padding-right: 15px;">
+          Learn More</button> </b></P>
+  </div>
+
+  </body>
 
 </html>
