--- a/projects/p1_landing_page/index.html
+++ b/projects/p1_landing_page/index.html
@@ -2,16 +2,15 @@
 <html style="background-color: black">
 
 <head>
-  <title>Project1: Landing Page</title>
+  <title>Assignment1: Landing Page</title>
   <link rel="icon"
         type="image"
         href="./images/icon_camera.png"
         style="background-color: white; text-align: start" />
 </head>
 
-<b>
-  <!-- 1st practice on nav bar -->
-  <!--<nav>
+<!-- 1st practice on nav bar -->
+<!--<nav>
     <img src="./images/icon_camera.png"
          alt="logo camera"
          style="background-color: white; width: 90px; border-radius: 25px" />
@@ -25,90 +24,108 @@
             </p>
   </nav>-->
 
-  <nav style="background-color: rgb(0, 0, 0)">
+<nav style="background-color: rgb(0, 0, 0)">
+  <div class="group"
+       style="width: 100%">
     <div class="group"
-         style="width: 100%">
-      <div style="display: inline-block; background-color: rgb(0, 0, 0); text-align: start; width: 27%; margin:20px;">
-        
-        <!--  -->
-        <!-- <img src="./images/icon_camera.png"
+         style="display: inline-block; background-color: rgb(0, 0, 0); text-align: start; width: 27%; margin:20px;">
+
+      <!--  -->
+      <!-- <img src="./images/icon_camera.png"
              alt="logo camera"
              style="background-color: white; width: 70px; border-radius:99% ; padding: 6px; border-style:groove; border-color: red;" /> -->
 
-             
-        <div style="border-radius:100% ; padding: 17px; border-style:groove; border-color: red; width: fit-content; background-color:rgb(171, 171, 171);">
-          <img src="./images/icon_camera.png"
-               alt="logo camera" 
-               style="width: 35px;transform:rotate(320deg) ;" />
-        </div>
+
+      <div
+           style="border-radius:100% ; padding: 17px; border-style:groove; border-color: red; width: fit-content; background-color:rgb(171, 171, 171);">
+        <img src="./images/icon_camera.png"
+             alt="logo camera"
+             style="width: 35px;transform:rotate(320deg) ;" />
       </div>
-      <div style="display: inline-block;
+    </div>
+    <div class="group"
+         style="display: inline-block;
             background-color: rgb(0, 0, 0);
             text-align: center;
             width: 45%;
             font-size: 25px;">
-        <p style="text-align:center; font-size: 29px ">
+      <p style="text-align:center; font-size: 29px ">
 
-          <b>
-            <a style="color: red;font-family: 'Times New Roman', Times, serif; padding-right: 20px ;">
-              Home
-            </a>
-            <a style="color: white;font-family: 'Times New Roman', Times, serif;padding-right: 20px;">
-              Service
-            </a>
-            <a style="color: white; padding-right: 20PX;">
-              About
-            </a>
-            <a style="color: white;padding-right: 20PX;">
-              Contact
-            </a>
-            <a style="color: white;padding-right: 20PX;">
-              Blog
-            </a>
-          </b>
-        </p>
-      </div>
-      <div style="
+        <b>
+          <a style="color: red;font-family: 'Times New Roman', Times, serif; padding-right: 20px ;">
+            Home
+          </a>
+          <a style="color: white;font-family: 'Times New Roman', Times, serif;padding-right: 20px;">
+            Service
+          </a>
+          <a style="color: white; padding-right: 20PX;">
+            About
+          </a>
+          <a style="color: white;padding-right: 20PX;">
+            Contact
+          </a>
+          <a style="color: white;padding-right: 20PX;">
+            Blog
+          </a>
+        </b>
+      </p>
+    </div>
+    <div class="group"
+         style="
             display: inline-block;
             background-color: rgb(8, 6, 6);
             text-align: right;
             width: 24%;
           ">
-        <b> <button type="button"
-                  style=" font-size: 35px ; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;padding: 7px;font-weight:600;padding-left: 15px;padding-right: 15px;border-style: double;">Log in</button>
-        </b>
-      </div>
+      <button type="button"
+              style=" font-size: 35px ; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;padding: 7px;font-weight:600;padding-left: 15px;padding-right: 15px;border-style: double;background-image: linear-gradient(to right,rgb(194, 20, 50),rgb(137, 32, 19));">Log
+        in</button>
     </div>
-  </nav>
-  <br><br><br><br><br><br>
-  <div style="color: red; ; display: inline; padding-left: 20%;font-size: 20px;">#Get Your1<sub>4</sub> Days Free Trial
   </div>
-  <b>
-    <div style="color: white;padding-left: 20%; font-size: 40px;">Manage All of Your Stuff </div>
-    <div style="padding-right: 20%;"><img src="./images/icon_image6.jpg"
-           alt="image"
-           style="float: right;background-color: black;"></div>
-    <div style="color: white;padding-left: 20%; font-size: 40px;"> Using A TGB</div>
-  </b>
-  <div style="color: rgb(131, 130, 129);padding-left: 20%; ">Lorem ipsum dolor sit amet consectetur adipisicing Eius
-    ratione site are the illegable </div>
-  <di style="color: rgb(133, 136, 136);padding-left: 20%;">again.</di>
-  <div style="padding-left: 20%;"> <img src="./images/icon_image2.jpg"
+</nav>
+
+<div class="city"
+     style="width: 100%;text-align: center;">
+  <div class="city"
+       style="padding-top: 80px;display: inline-block; text-align: start; ">
+    <p style="color: red; font-size: 20px;;">#Get Your1<sub>4</sub> Days Free Trial
+    </p>
+    <p style="color: white; font-size: 50px;;"><b>Manage All of Your Stuff <br>Using A TGB</b></p>
+    <p style="color: rgb(131, 130, 129); font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing Eius
+      ratione site the inner <br>again.</p>
+    <img src="./images/icon_image2.jpg"
          alt="image"
-         width="59px"
+         width="39px"
          style="border-radius: 99%;border-style: double;border-color: red;">
     <img src="./images/icon_image3.webp"
          alt=" image"
-         width="59px"
-         style="border-radius: 99%; border-style: double;border-color: red;"><img src="./images/icon_image4.jpg"
+         width="39px"
+         style="border-radius: 99%; border-style: double;border-color: red;">
+    <img src="./images/icon_image4.jpg"
          alt="image"
-         width="59px"
+         width="39px"
          style="border-radius: 99%;border-style: double;border-color: RED;">
-    <p style="color: white;display: inline;"><sub>4</sub>M+ users <b><button type="button"
-                style=" font-size: 35px; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;margin-top: 45px;padding: 7px;border-style: double;font-weight: 600;padding-left: 15px;padding-right: 15px;">
-          Learn More</button> </b></P>
+    <p style="color: white; display: inline-block;;"><sub>4</sub>M+ users </p>
+    <p><button type="button"
+              style=" font-size: 35px; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;margin-top: 45px;padding: 7px;border-style: double;font-weight: 600;padding-left: 15px;padding-right: 15px; background-image: linear-gradient(to right,rgb(194, 20, 50),rgb(137, 32, 19));">
+        Learn More</button>
+      </b></P>
   </div>
 
-  </body>
+  <div  class="city" style="display: inline-block;"><img src="./images/icon_image7.jpg" style="transform: rotate(45deg);margin-bottom: 18%;margin-left: 20% ;"></div>
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+</body>
 
 </html>
