cricle_images_updated
add one parent div in ciecle images and make them two child div

--- a/projects/p1_landing_page/index.html
+++ b/projects/p1_landing_page/index.html
@@ -93,38 +93,38 @@
     <p style="color: white; font-size: 50px;;"><b>Manage All of Your Stuff <br>Using A TGB</b></p>
     <p style="color: rgb(131, 130, 129); font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing Eius
       ratione site the inner <br>again.</p>
-    <img src="./images/icon_image2.jpg"
-         alt="image"
-         width="39px"
-         style="border-radius: 99%;border-style: double;border-color: red;">
-    <img src="./images/icon_image3.webp"
-         alt=" image"
-         width="39px"
-         style="border-radius: 99%; border-style: double;border-color: red;">
-    <img src="./images/icon_image4.jpg"
-         alt="image"
-         width="39px"
-         style="border-radius: 99%;border-style: double;border-color: RED;">
-    <p style="color: white; display: inline-block;;"><sub>4</sub>M+ users </p>
+
+    <div>
+      <div style="display: inline-block; border-radius: 100%;border-style: double;">
+        <img src="./images/icon_image2.jpg"
+             alt="image"
+             width="29px"
+             style="border-radius: 100%;border-style: double;border-color: red;">
+        <img src="./images/icon_image3.webp"
+             alt=" image"
+             width="29px"
+             style="border-radius: 100%; border-style: double;border-color: red;">
+        <img src="./images/icon_image4.jpg"
+             alt="image"
+             width="29px"
+             style="border-radius: 100%;border-style: double;border-color: RED;">
+      </div>
+      <div style="color: white; display: inline-block;">
+        <p><sub>4</sub>M+ users </p>
+      </div>
+    </div>
+
     <p><button type="button"
               style=" font-size: 35px; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;margin-top: 45px;padding: 7px;border-style: double;font-weight: 600;padding-left: 15px;padding-right: 15px; background-image: linear-gradient(to right,rgb(194, 20, 50),rgb(137, 32, 19));">
         Learn More</button>
       </b></P>
   </div>
 
-  <div  class="city" style="display: inline-block;"><img src="./images/icon_image7.jpg" style="transform: rotate(45deg);margin-bottom: 18%;margin-left: 20% ;"></div>
-
-
-
-
-
-
+  <div class="city"
+       style="display: inline-block;"><img src="./images/icon_image7.jpg"
+         style="transform: rotate(45deg);margin-bottom: 20%;margin-left: 23% ;padding-left: 20%;padding-top: 20%;">
+  </div>
 </div>
-
-
-
-
-
 
 </body>
 
