css_colors_border_background completed

--- a/projects/p1_landing_page/index.html
+++ b/projects/p1_landing_page/index.html
@@ -95,21 +95,24 @@
       ratione site the inner <br>again.</p>
 
     <div>
-      <div style="display: inline-block; border-radius: 100%;border-style: double;">
+      <div style="display: inline-block; border-radius: 100%;border-style: double; align-items: center;">
         <img src="./images/icon_image2.jpg"
              alt="image"
-             width="29px"
+             width="35px"
+             height="35px"
              style="border-radius: 100%;border-style: double;border-color: red;">
         <img src="./images/icon_image3.webp"
              alt=" image"
-             width="29px"
+             width="35px"
+             height="35px"
              style="border-radius: 100%; border-style: double;border-color: red;">
         <img src="./images/icon_image4.jpg"
              alt="image"
-             width="29px"
+             width="35px"
+             height="35px"
              style="border-radius: 100%;border-style: double;border-color: RED;">
       </div>
-      <div style="color: white; display: inline-block;">
+      <div style="color: white; display: inline-block; text-align: center;">
         <p><sub>4</sub>M+ users </p>
       </div>
     </div>
