CSS_table_font_list_links complted

--- a/projects/p1_landing_page/index.html
+++ b/projects/p1_landing_page/index.html
@@ -28,7 +28,7 @@
   <div class="group"
        style="width: 100%">
     <div class="group"
-         style="display: inline-block; background-color: rgb(0, 0, 0); text-align: start; width: 27%; margin:20px;">
+         style="display: inline-block; background-color: rgb(0, 0, 0); text-align: start; margin:20px;width: 20%;">
 
       <!--  -->
       <!-- <img src="./images/icon_camera.png"
@@ -47,12 +47,12 @@
          style="display: inline-block;
             background-color: rgb(0, 0, 0);
             text-align: center;
-            width: 45%;
+            width: 50%;
             font-size: 25px;">
       <p style="text-align:center; font-size: 29px ">
 
         <b>
-          <a style="color: red;font-family: 'Times New Roman', Times, serif; padding-right: 20px ;">
+          <a style="color: red;font-family: 'Times New Roman', Times, serif; padding-right: 20px ;" >
             Home
           </a>
           <a style="color: white;font-family: 'Times New Roman', Times, serif;padding-right: 20px;">
@@ -74,58 +74,56 @@
          style="
             display: inline-block;
             background-color: rgb(8, 6, 6);
-            text-align: right;
-            width: 24%;
+            width: 25%;
+            text-align: end;
           ">
       <button type="button"
-              style=" font-size: 35px ; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;padding: 7px;font-weight:600;padding-left: 15px;padding-right: 15px;border-style: double;background-image: linear-gradient(to right,rgb(194, 20, 50),rgb(137, 32, 19));">Log
+              style=" font-size: 35px ; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;padding: 7px;font-weight:600;border-style: double;background-image: linear-gradient(to right,rgb(194, 20, 50),rgb(137, 32, 19));">Log
         in</button>
     </div>
   </div>
 </nav>
 
 <div class="city"
-     style="width: 100%;text-align: center;">
+     style="text-align: center;">
   <div class="city"
-       style="padding-top: 80px;display: inline-block; text-align: start; ">
+       style="display: inline-block; text-align: start; ">
     <p style="color: red; font-size: 20px;;">#Get Your1<sub>4</sub> Days Free Trial
     </p>
     <p style="color: white; font-size: 50px;;"><b>Manage All of Your Stuff <br>Using A TGB</b></p>
-    <p style="color: rgb(131, 130, 129); font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing Eius
-      ratione site the inner <br>again.</p>
+    <small style="color: rgb(131, 130, 129); font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing Eius
+      ratione site the inner <br>again.</small>
 
     <div>
-      <div style="display: inline-block; border-radius: 100%;border-style: double; align-items: center;">
+      <div style="display: inline-block; border-radius: 100%;border-style: double;vertical-align: middle; ">
         <img src="./images/icon_image2.jpg"
              alt="image"
-             width="35px"
-             height="35px"
+             width="25px"
+             height="25px"
              style="border-radius: 100%;border-style: double;border-color: red;">
         <img src="./images/icon_image3.webp"
              alt=" image"
-             width="35px"
-             height="35px"
+             width="25px"
+             height="25px"
              style="border-radius: 100%; border-style: double;border-color: red;">
         <img src="./images/icon_image4.jpg"
              alt="image"
-             width="35px"
-             height="35px"
+             width="25px"
+             height="25px"
              style="border-radius: 100%;border-style: double;border-color: RED;">
       </div>
-      <div style="color: white; display: inline-block; text-align: center;">
+      <div style="color: white; display: inline-block; text-align: center;vertical-align:middle; font-weight: 800;">
         <p><sub>4</sub>M+ users </p>
       </div>
     </div>
-
     <p><button type="button"
-              style=" font-size: 35px; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;margin-top: 45px;padding: 7px;border-style: double;font-weight: 600;padding-left: 15px;padding-right: 15px; background-image: linear-gradient(to right,rgb(194, 20, 50),rgb(137, 32, 19));">
+              style=" font-size: 35px; background-color: rgb(162, 28, 31); border-radius: 8px; color: white;margin:1%;padding: 7px;border-style: double;font-weight: 600;padding-left: 15px;padding-right: 15px; background-image: linear-gradient(to right,rgb(194, 20, 50),rgb(137, 32, 19));">
         Learn More</button>
       </b></P>
   </div>
-
   <div class="city"
        style="display: inline-block;"><img src="./images/icon_image7.jpg"
-         style="transform: rotate(45deg);margin-bottom: 20%;margin-left: 23% ;padding-left: 20%;padding-top: 20%;">
+         style="transform: rotate(45deg);margin-bottom: 10%;margin-left: 23% ;padding-left: 20%;padding-top: 50%;height: 50%;width: 60%;">
   </div>
 </div>
 
