--- a/study css/animations,tooltip.html
+++ b/study css/animations,tooltip.html
@@ -17,9 +17,28 @@ text-align: center;border-radius: 6px;padding: 5px 0;
 position: absolute;
 z-index: 1;top: -5px;left:105%;opacity: 0;transition: opacity 4s;}
 .tooltip:hover .tooltiptext{visibility: visible;opacity: 1;}
+div {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  animation-name: example;
+  animation-duration: 9s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;  
+}
+@keyframes example{
+    0%{background-color: red;left: 0px;top: 0%;}
+    25%{background-color: yellow;left: 200px;top: 0%;}
+    50%{background-color: blue;left: 200px;top: 200px;}
+    75%{background-color: antiquewhite;left: 0px;top: 200px;}
+    100%{background-color: red;left: 0%;top: 0%;}
+}
     </style>
 </head>
+
 <body style="text-align: center;">
+   <!--tolltip-->
     <h1>the heaading</h1>
     <div class="tooltip">hover me
     <span class="tooltiptext">tooltip text</span></div>
@@ -27,5 +46,7 @@ z-index: 1;top: -5px;left:105%;opacity: 0;transition: opacity 4s;}
     <div class="tooltip">hoverrr me
         <span class="tooltiptext">abdullah</span>
     </div>
+    <!--Animations-->
+    <div></div>
 </body>
 </html>
